<resources>
    <string name="app_name">Oso Polar</string>
    <string name="top_de_ventas">Top de ventas.</string>
    <string name="nueva_venta">Nueva venta</string>
    <string name="escanear_codigo">Escanear codigo</string>
    <string name="cancelar">Cancelar</string>
    <string name="finalizar">Finalizar</string>
    <string name="total_venta">Total venta</string>
    <string name="total">Total</string>
    <string name="subtotal_solo">Subtotal</string>
    <string name="subtotal">El subtotal es:</string>
    <string name="cantidad">Cantidad</string>
    <string name="producto">Producto</string>
    <string name="clientes">Clientes</string>
    <string name="la_tiendita_de_la_esquina">La tiendita de la esquina</string>
    <string name="venta">VENTA</string>
    <string name="escribe_el_id_de_tu_equipo">Deben de ser 4 digitos</string>

    <string-array name="nombresClientes">
        <item>Abarrotes colima</item>
        <item>Javier Gonzalez</item>
        <item>Raul Hernandez</item>
        <item>Super Marissa</item>
        <item>Abarrotes la estancia</item>
    </string-array>

    <string-array name="productos">
        <item> Bolsa de hielo 3Lg </item>
        <item> Bolsa de hielo grande </item>
        <item> Barra de hielo </item>
        <item> Media barra </item>
        <item>Abarrotes la estancia</item>
    </string-array>

    <string name="aceptar">Aceptar</string>
    <string name="buscar">Buscar</string>
    <string name="totalVentas">Total de ventas </string>
    <string name="totalVentasSinVenta">Total de ventas: Sin ventas.</string>
    <string name="montoVenta">Monto de venta </string>
    <string name="montoVentaSinMonto">Monto de venta: Sin monto.</string>
    <string name="pesos"> pesos</string>
    <string name="precio"> Precio Lista</string>
    <string name="confirmar"> Confirmar</string>
    <string name="hielo_bolsa_grande">Hielo bolsa grande</string>
    <string name="nombre_cliente">Ingresa el nombre del cliente</string>
    <string name="red">Ingrese el nombre de la red</string>
</resources>
