<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    tools:ignore="MissingPrefix"
    android:layout_height="match_parent"
    tools:context="arenzo.alejandroochoa.osopolar.venta">

    <TextView
        android:id="@+id/txtVenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/venta"
        fontPath="fonts/Roboto-Bold.ttf"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/txtNombreCliente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/la_tiendita_de_la_esquina"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/txtVenta"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/txtProducto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/producto"
        android:layout_marginTop="42dp"
        app:layout_constraintTop_toBottomOf="@+id/txtNombreCliente"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Spinner
        android:id="@+id/spProductos"
        android:layout_width="172dp"
        android:layout_height="32dp"
        android:layout_marginTop="26dp"
        app:layout_constraintTop_toBottomOf="@+id/txtNombreCliente"
        app:layout_constraintLeft_toRightOf="@+id/txtProducto"
        android:layout_marginLeft="23dp" />

    <EditText
        android:id="@+id/edtPrecioUnitario"
        android:layout_width="111dp"
        android:layout_height="40dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:layout_marginTop="17dp"
        app:layout_constraintTop_toBottomOf="@+id/txtNombreCliente"
        app:layout_constraintLeft_toRightOf="@+id/spProductos"
        android:layout_marginLeft="8dp" />

    <TextView
        android:id="@+id/txtCantidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cantidad"
        android:layout_marginTop="44dp"
        app:layout_constraintTop_toBottomOf="@+id/txtProducto"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/edtCantidad"
        android:layout_width="87dp"
        android:layout_height="45dp"
        android:ems="10"
        android:inputType="number"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/spProductos"
        app:layout_constraintLeft_toRightOf="@+id/txtCantidad"
        android:layout_marginLeft="28dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subtotal"
        android:layout_marginTop="59dp"
        app:layout_constraintTop_toBottomOf="@+id/txtCantidad"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/edtSubtotal"
        android:layout_width="85dp"
        android:layout_height="43dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_marginTop="26dp"
        app:layout_constraintTop_toBottomOf="@+id/edtCantidad"
        app:layout_constraintLeft_toRightOf="@+id/textView5"
        android:layout_marginLeft="32dp" />

    <GridView
        android:id="@+id/grdProductos"
        android:layout_width="380dp"
        android:layout_height="166dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="34dp"
        app:layout_constraintTop_toBottomOf="@+id/edtSubtotal"
        app:layout_constraintHorizontal_bias="0.466" />

    <TextView
        android:id="@+id/txtTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_venta"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="13dp"
        app:layout_constraintTop_toBottomOf="@+id/grdProductos" />

    <Button
        android:id="@+id/btnFinalizarVenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/finalizar"
        android:layout_marginTop="70dp"
        app:layout_constraintTop_toBottomOf="@+id/grdProductos"
        app:layout_constraintLeft_toRightOf="@+id/btnCancelarVenta"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0" />

    <Button
        android:id="@+id/btnCancelarVenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancelar"
        android:layout_marginTop="70dp"
        app:layout_constraintTop_toBottomOf="@+id/grdProductos"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="88dp" />
</android.support.constraint.ConstraintLayout>
